one more CRU to go

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+  <%= render 'layouts/navbar' %>
     <%= yield %>
+  <br />
+  <%= render 'layouts/navbar' %>
   </body>
 </html>
