--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,4 +3,6 @@
 <% @posts.each do |post| %>
   <h2><%= post.title %></h2>
   <%= link_to 'Show Post It', post_path(post) %>
+  <%= link_to 'Edit Post It', edit_post_path(post) %>
+  <%= link_to 'Delete', delete_post_path(post) %>
 <% end %>
