--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,31 @@
 <h1> Post Its </h1>
 <p><%= link_to 'New Post It', new_post_path %></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Date</th>
+      <th>Body</th>
+      <th>Completed?</th>
+      <th>Edit</th>
+      <th>Delete</th>
+    </tr>
+  </thead>
+  <tbody>
+  <tr>
 <% @posts.each do |post| %>
-  <h2><%= post.title %></h2>
-  <%= link_to 'Show Post It', post_path(post) %>
-  <%= link_to 'Edit Post It', edit_post_path(post) %>
-  <%= link_to 'Delete', post, method: :delete %>
+    <td><%= link_to post.title, post_path(post) %></td>
+    <td><%= post.date %></td>
+    <td><%= post.body %></td>
+    <% if post.completed == true %>
+    <td><%= 'Yes' %></td>
+    <% else %>
+    <td><%= 'No' %></td>
+    <% end %>
+    <td><%= link_to 'Edit', edit_post_path(post) %></td>
+    <td><%= link_to 'Delete', post, method: :delete %></td>
+  </tr>
+</tbody>
 <% end %>
+</table>
