got the form styled and working

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,18 @@
  */
 
  @import "bulma";
+
+body {
+  margin: 50px;
+  padding: 50px;
+}
+
+.navbar {
+  margin: 50px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 36px;
+}
+
