--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Post Its </h1>
 <p><%= link_to 'New Post It', new_post_path %></p>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
