--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,7 @@
-<%= link_to 'Home', root_path %>
-<%= link_to 'About', about_path %>
-<%= link_to 'Post Its', posts_path %>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+<a class="navbar-item"><%= link_to 'Home', root_path %></a>
+<a class="navbar-item"><%= link_to 'About', about_path %></a>
+<a class="navbar-item"><%= link_to 'Post Its', posts_path %></a>
+  </div>
+</nav>
