--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.text_field :title %>
 
   <%= f.label :date %>
-  <%= f.text_field :date %>
+  <%= f.date_select :date %>
 
   <%= f.label :body %>
   <%= f.text_area :body %>
