--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @post.title %></h1>
+<table class="table"
+
 <h4><%= @post.date %></h4>
 <p><%= @post.body %></p>
 <p><%= @post.completed %></p>
