--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,4 @@
-<h1> Post Its </h1>
-<p><%= link_to 'New Post It', new_post_path %></p>
+<h3><%= link_to 'New Post It', new_post_path %></h3>
 
 <table class="table">
   <thead>
